# infusoria

./: CMakeLists.txt  README.md  infusoria.pro
src/: CMakeLists.txt  main.cpp  qml.qrc
src/base/: FileOperations.cpp  InfuController.cpp  InfuController.h  InfuProto.cpp  fileoperations.cpp  fileoperations.h  infucontroller.cpp  infucontroller.h  infuproto.cpp  infuproto.h  infurpc.cpp  infurpc.h  jsonrpc.cpp  jsonrpc.h  settings.cpp  settings.h
src/common/: App.h  Application.cpp  Application.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  app.h  common.pri  macro.h  settings.cpp  settings.h  utils.cpp  utils.h
src/core/: Application.h
src/database/: Database.cpp  Init.cpp  Init.h  Migrater.h  init.cpp  init.h
src/global/: app.h  utils.cpp  utils.h
src/gui/: About.qml  Editor.qml  NewInfusoria.qml  Options.qml  dialog.js  main.qml
src/gui/components/: BrowseButton.qml  SliderIndividuality.qml  WindowDialog.qml
src/gui/components/messagedialog/: MessageDialogBase.qml  MessageDialogWarning.qml
src/infusoria/: Infusoria.cpp  Infusoria.h  infusoria.cpp  infusoria.h
src/logger/: Logger.cpp  Logger.h  logger.cpp  logger.h
src/mind/: mind.cpp  mind.h
src/net/: WebSocketManager.cpp  WebSocketManager.h  websocketmanager.cpp  websocketmanager.h
src/organism/: Organism.cpp  Organism.h
src/repl/: Repl.cpp  Repl.h  repl.cpp  repl.h
src/settings/: Settings.cpp  Settings.h
src/ui/: Dashboard.cpp  Dashboard.h  MainWindow.cpp  MainWindow.h
src/ui/dialog/: NewOrganism.cpp  NewOrganism.h  Preferences.cpp
